ported latest changes/fixes from java's data