@@ -50,7 +50,6 @@ import java.util.Set;
 
 import processing.core.PApplet;
 
-
 /**
  * A JSONObject is an unordered collection of name/value pairs. Its external
  * form is a string wrapped in curly braces with colons between the names and
@@ -96,7 +95,7 @@ import processing.core.PApplet;
  * <code>{ } [ ] / \ : , = ; #</code> and if they do not look like numbers and
  * if they are not the reserved words <code>true</code>, <code>false</code>, or
  * <code>null</code>.</li>
- * <li>Keys can be followed by <code>=</code> or <code>=></code> as well as by
+ * <li>Keys can be followed by <code>=</code> or {@code =>} as well as by
  * <code>:</code>.</li>
  * <li>Values can be followed by <code>;</code> <small>(semicolon)</small> as
  * well as by <code>,</code> <small>(comma)</small>.</li>
@@ -111,7 +110,6 @@ import processing.core.PApplet;
  * @see PApplet#saveJSONObject(JSONObject, String)
  * @see PApplet#saveJSONArray(JSONArray, String)
  */
-@SuppressWarnings("rawtypes")
 public class JSONObject {
   /**
    * The maximum number of keys in the key pool.
@@ -209,8 +207,6 @@ public class JSONObject {
 //   * Missing keys are ignored.
 //   * @param jo A JSONObject.
 //   * @param names An array of strings.
-//   * @throws JSONException
-//   * @exception JSONException If a value is a non-finite number or if a name is duplicated.
 //   */
 //  public JSONObject(JSONObject jo, String[] names) {
 //    this();
@@ -234,7 +230,7 @@ public class JSONObject {
   /**
    * Construct a JSONObject from a JSONTokener.
    * @param x A JSONTokener object containing the source string.
-   * @throws JSONException If there is a syntax error in the source string
+   * @throws RuntimeException If there is a syntax error in the source string
    *  or a duplicated key.
    */
   protected JSONObject(JSONTokener x) {
@@ -293,7 +289,6 @@ public class JSONObject {
    *
    * @param map A map object that can be used to initialize the contents of
    *  the JSONObject.
-   * @throws JSONException
    */
   protected JSONObject(HashMap<String, Object> map) {
     this.map = new HashMap<String, Object>();
@@ -399,7 +394,7 @@ public class JSONObject {
    * @param source    A string beginning
    *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
    *  with <code>}</code>&nbsp;<small>(right brace)</small>.
-   * @exception JSONException If there is a syntax error in the source
+   * @exception RuntimeException If there is a syntax error in the source
    *  string or a duplicated key.
    */
   static public JSONObject parse(String source) {
@@ -540,9 +535,9 @@ public class JSONObject {
    *
    * @param key   A key string.
    * @return      The object associated with the key.
-   * @throws      JSONException if the key is not found.
+   * @throws      RuntimeException if the key is not found.
    */
-  private Object get(String key) {
+  public Object get(String key) {
     if (key == null) {
       throw new RuntimeException("Null key.");
     }
@@ -561,7 +556,7 @@ public class JSONObject {
    * @brief Gets the string value associated with a key
    * @param key a key string
    * @return A string which is the value.
-   * @throws JSONException if there is no string value for the key.
+   * @throws RuntimeException if there is no string value for the key.
    * @see JSONObject#getInt(String)
    * @see JSONObject#getFloat(String)
    * @see JSONObject#getBoolean(String)
@@ -594,9 +589,9 @@ public class JSONObject {
    *
    * @webref jsonobject:method
    * @brief Gets the int value associated with a key
-   * @param key a key string
+   * @param key A key string.
    * @return The integer value.
-   * @throws JSONException if the key is not found or if the value cannot
+   * @throws RuntimeException if the key is not found or if the value cannot
    *  be converted to an integer.
    * @see JSONObject#getFloat(String)
    * @see JSONObject#getString(String)
@@ -638,7 +633,7 @@ public class JSONObject {
    *
    * @param key   A key string.
    * @return      The long value.
-   * @throws   JSONException if the key is not found or if the value cannot
+   * @throws   RuntimeException if the key is not found or if the value cannot
    *  be converted to a long.
    */
   public long getLong(String key) {
@@ -698,7 +693,7 @@ public class JSONObject {
    * Get the double value associated with a key.
    * @param key   A key string.
    * @return      The numeric value.
-   * @throws JSONException if the key is not found or
+   * @throws RuntimeException if the key is not found or
    *  if the value is not a Number object and cannot be converted to a number.
    */
   public double getDouble(String key) {
@@ -739,7 +734,7 @@ public class JSONObject {
    * @brief Gets the boolean value associated with a key
    * @param key a key string
    * @return The truth.
-   * @throws JSONException if the value is not a Boolean or the String "true" or "false".
+   * @throws RuntimeException if the value is not a Boolean or the String "true" or "false".
    * @see JSONObject#getInt(String)
    * @see JSONObject#getFloat(String)
    * @see JSONObject#getString(String)
@@ -784,7 +779,7 @@ public class JSONObject {
    * @brief Gets the JSONArray value associated with a key
    * @param key a key string
    * @return A JSONArray which is the value.
-   * @throws JSONException if the key is not found or if the value is not a JSONArray.
+   * @throws RuntimeException if the key is not found or if the value is not a JSONArray.
    * @see JSONObject#getJSONObject(String)
    * @see JSONObject#setJSONObject(String, JSONObject)
    * @see JSONObject#setJSONArray(String, JSONArray)
@@ -805,7 +800,7 @@ public class JSONObject {
    * @brief Gets the JSONObject value associated with a key
    * @param key a key string
    * @return A JSONObject which is the value.
-   * @throws JSONException if the key is not found or if the value is not a JSONObject.
+   * @throws RuntimeException if the key is not found or if the value is not a JSONObject.
    * @see JSONObject#getJSONArray(String)
    * @see JSONObject#setJSONObject(String, JSONObject)
    * @see JSONObject#setJSONArray(String, JSONArray)
@@ -903,7 +898,9 @@ public class JSONObject {
 
   /**
    * Determine if the value associated with the key is null or if there is
-   *  no value.
+   * no value.
+   *
+   * @webref
    * @param key   A key string.
    * @return      true if there is no value associated with the key or if
    *  the value is the JSONObject.NULL object.
@@ -964,7 +961,7 @@ public class JSONObject {
    * Produce a string from a Number.
    * @param  number A Number
    * @return A String.
-   * @throws JSONException If n is a non-finite number.
+   * @throws RuntimeException If number is null or a non-finite number.
    */
   private static String numberToString(Number number) {
     if (number == null) {
@@ -1164,13 +1161,13 @@ public class JSONObject {
    * @param key a key string
    * @param value the value to assign
    * @return this.
-   * @throws JSONException If the key is null.
+   * @throws RuntimeException If the key is null.
    * @see JSONObject#setFloat(String, float)
    * @see JSONObject#setString(String, String)
    * @see JSONObject#setBoolean(String, boolean)
    */
   public JSONObject setInt(String key, int value) {
-    this.put(key, new Integer(value));
+    this.put(key, Integer.valueOf(value));
     return this;
   }
 
@@ -1181,10 +1178,10 @@ public class JSONObject {
    * @param key   A key string.
    * @param value A long which is the value.
    * @return this.
-   * @throws JSONException If the key is null.
+   * @throws RuntimeException If the key is null.
    */
   public JSONObject setLong(String key, long value) {
-    this.put(key, new Long(value));
+    this.put(key, Long.valueOf(value));
     return this;
   }
 
@@ -1193,6 +1190,7 @@ public class JSONObject {
    * @brief Put a key/float pair in the JSONObject
    * @param key a key string
    * @param value the value to assign
+   * @throws RuntimeException If the key is null or if the number is NaN or infinite.
    * @see JSONObject#setInt(String, int)
    * @see JSONObject#setString(String, String)
    * @see JSONObject#setBoolean(String, boolean)
@@ -1209,7 +1207,7 @@ public class JSONObject {
    * @param key   A key string.
    * @param value A double which is the value.
    * @return this.
-   * @throws JSONException If the key is null or if the number is invalid.
+   * @throws RuntimeException If the key is null or if the number is NaN or infinite.
    */
   public JSONObject setDouble(String key, double value) {
     this.put(key, new Double(value));
@@ -1225,7 +1223,7 @@ public class JSONObject {
    * @param key a key string
    * @param value the value to assign
    * @return this.
-   * @throws JSONException If the key is null.
+   * @throws RuntimeException If the key is null.
    * @see JSONObject#setInt(String, int)
    * @see JSONObject#setFloat(String, float)
    * @see JSONObject#setString(String, String)
@@ -1299,10 +1297,10 @@ public class JSONObject {
    *  types: Boolean, Double, Integer, JSONArray, JSONObject, Long, String,
    *  or the JSONObject.NULL object.
    * @return this.
-   * @throws JSONException If the value is non-finite number
+   * @throws RuntimeException If the value is non-finite number
    *  or if the key is null.
    */
-  private JSONObject put(String key, Object value) {
+  public JSONObject put(String key, Object value) {
     String pooled;
     if (key == null) {
       throw new RuntimeException("Null key.");
@@ -1332,8 +1330,9 @@ public class JSONObject {
    * with that name.
    * @param key
    * @param value
-   * @return his.
-   * @throws JSONException if the key is a duplicate
+   * @return {@code this}.
+   * @throws RuntimeException if the key is a duplicate, or if
+   * {@link #put(String,Object)} throws.
    */
   private JSONObject putOnce(String key, Object value) {
     if (key != null && value != null) {
@@ -1494,9 +1493,9 @@ public class JSONObject {
             return d;
           }
         } else {
-          Long myLong = new Long(string);
+          Long myLong = Long.valueOf(string);
           if (myLong.longValue() == myLong.intValue()) {
-            return new Integer(myLong.intValue());
+            return Integer.valueOf(myLong.intValue());
           } else {
             return myLong;
           }
@@ -1510,8 +1509,9 @@ public class JSONObject {
 
   /**
    * Throw an exception if the object is a NaN or infinite number.
-   * @param o The object to test.
-   * @throws JSONException If o is a non-finite number.
+   * @param o The object to test. If not Float or Double, accepted without
+   *    exceptions.
+   * @throws RuntimeException If o is infinite or NaN.
    */
   static protected void testValidity(Object o) {
     if (o != null) {
@@ -1556,12 +1556,36 @@ public class JSONObject {
 
 
   public boolean save(File file, String options) {
-    return write(PApplet.createWriter(file));
+    PrintWriter writer = PApplet.createWriter(file);
+    boolean success = write(writer, options);
+    writer.close();
+    return success;
   }
 
 
   public boolean write(PrintWriter output) {
-    output.print(format(2));
+    return write(output, null);
+  }
+
+
+  public boolean write(PrintWriter output, String options) {
+    int indentFactor = 2;
+    if (options != null) {
+      String[] opts = PApplet.split(options, ',');
+      for (String opt : opts) {
+        if (opt.equals("compact")) {
+          indentFactor = -1;
+        } else if (opt.startsWith("indent=")) {
+          indentFactor = PApplet.parseInt(opt.substring(7), -2);
+          if (indentFactor == -2) {
+            throw new IllegalArgumentException("Could not read a number from " + opt);
+          }
+        } else {
+          System.err.println("Ignoring " + opt);
+        }
+      }
+    }
+    output.print(format(indentFactor));
     output.flush();
     return true;
   }
@@ -1592,12 +1616,12 @@ public class JSONObject {
    *  representation of the object, beginning
    *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
    *  with <code>}</code>&nbsp;<small>(right brace)</small>.
-   * @throws JSONException If the object contains an invalid number.
+   * @throws RuntimeException If the object contains an invalid number.
    */
   public String format(int indentFactor) {
     StringWriter w = new StringWriter();
     synchronized (w.getBuffer()) {
-      return this.write(w, indentFactor, 0).toString();
+      return this.writeInternal(w, indentFactor, 0).toString();
     }
   }
 
@@ -1620,7 +1644,7 @@ public class JSONObject {
    *  representation of the object, beginning
    *  with <code>{</code>&nbsp;<small>(left brace)</small> and ending
    *  with <code>}</code>&nbsp;<small>(right brace)</small>.
-   * @throws JSONException If the value is or contains an invalid number.
+   * @throws RuntimeException If the value is or contains an invalid number.
    */
   static protected String valueToString(Object value) {
     if (value == null || value.equals(null)) {
@@ -1646,10 +1670,10 @@ public class JSONObject {
       return value.toString();
     }
     if (value instanceof Map) {
-      return new JSONObject((Map)value).toString();
+      return new JSONObject(value).toString();
     }
     if (value instanceof Collection) {
-      return new JSONArray((Collection)value).toString();
+      return new JSONArray(value).toString();
     }
     if (value.getClass().isArray()) {
       return new JSONArray(value).toString();
@@ -1685,13 +1709,13 @@ public class JSONObject {
       }
 
       if (object instanceof Collection) {
-        return new JSONArray((Collection)object);
+        return new JSONArray(object);
       }
       if (object.getClass().isArray()) {
         return new JSONArray(object);
       }
       if (object instanceof Map) {
-        return new JSONObject((Map)object);
+        return new JSONObject(object);
       }
       Package objectPackage = object.getClass().getPackage();
       String objectPackageName = objectPackage != null
@@ -1730,16 +1754,16 @@ public class JSONObject {
     if (value == null || value.equals(null)) {
       writer.write("null");
     } else if (value instanceof JSONObject) {
-      ((JSONObject) value).write(writer, indentFactor, indent);
+      ((JSONObject) value).writeInternal(writer, indentFactor, indent);
     } else if (value instanceof JSONArray) {
-      ((JSONArray) value).write(writer, indentFactor, indent);
+      ((JSONArray) value).writeInternal(writer, indentFactor, indent);
     } else if (value instanceof Map) {
-      new JSONObject((Map) value).write(writer, indentFactor, indent);
+      new JSONObject(value).writeInternal(writer, indentFactor, indent);
     } else if (value instanceof Collection) {
-      new JSONArray((Collection) value).write(writer, indentFactor,
+      new JSONArray(value).writeInternal(writer, indentFactor,
                                               indent);
     } else if (value.getClass().isArray()) {
-      new JSONArray(value).write(writer, indentFactor, indent);
+      new JSONArray(value).writeInternal(writer, indentFactor, indent);
     } else if (value instanceof Number) {
       writer.write(numberToString((Number) value));
     } else if (value instanceof Boolean) {
@@ -1768,15 +1792,14 @@ public class JSONObject {
   }
 
   /**
-   * Write the contents of the JSONObject as JSON text to a writer. For
-   * compactness, no whitespace is added.
+   * Write the contents of the JSONObject as JSON text to a writer.
    * <p>
    * Warning: This method assumes that the data structure is acyclical.
    *
    * @return The writer.
-   * @throws JSONException
+   * @throws RuntimeException
    */
-  protected Writer write(Writer writer, int indentFactor, int indent) {
+  protected Writer writeInternal(Writer writer, int indentFactor, int indent) {
     try {
       boolean commanate = false;
       final int length = this.size();
@@ -1792,9 +1815,10 @@ public class JSONObject {
         if (actualFactor > 0) {
           writer.write(' ');
         }
-        writeValue(writer, this.map.get(key), actualFactor, indent);
+        //writeValue(writer, this.map.get(key), actualFactor, indent);
+        writeValue(writer, this.map.get(key), indentFactor, indent);
       } else if (length != 0) {
-        final int newindent = indent + actualFactor;
+        final int newIndent = indent + actualFactor;
         while (keys.hasNext()) {
           Object key = keys.next();
           if (commanate) {
@@ -1803,14 +1827,14 @@ public class JSONObject {
           if (indentFactor != -1) {
             writer.write('\n');
           }
-          indent(writer, newindent);
+          indent(writer, newIndent);
           writer.write(quote(key.toString()));
           writer.write(':');
           if (actualFactor > 0) {
             writer.write(' ');
           }
-          writeValue(writer, this.map.get(key), actualFactor,
-                     newindent);
+          //writeValue(writer, this.map.get(key), actualFactor, newIndent);
+          writeValue(writer, this.map.get(key), indentFactor, newIndent);
           commanate = true;
         }
         if (indentFactor != -1) {
